# carts-benchmarks

./: .gitignore  AI_ML_BENCHMARKS.md  README.md  README_NEW_BENCHMARKS.md  arts.cfg  benchmark_runner.py  benchmarks_manifest.yaml  carts-benchmarks  pyproject.toml  run_all_benchmarks.sh
NPB3.3-OMP-C/CG/: Makefile.carts  cg.c  npbparams.h
NPB3.3-OMP-C/EP/: Makefile.carts  npbparams.h
NPB3.3-OMP-C/IS/: Makefile.carts  npbparams.h
NPB3.3-OMP-C/UA/: npbparams.h  transfer.c  transfer_au.c  utils.c
NPB3.3-OMP-C/common/: print_results.h
bots/nqueens/: Makefile.carts  nqueens.c
common/: carts-pipeline.mk  carts.mk
docs/: hypothesis.md  task1.md  task3.md  tasks.md
graph500/: Makefile  README.md  carts.mk
graph500/graph-gen/: Makefile  graph_gen.c
kastors/: .gitignore  arts.cfg
kastors-jacobi/: Makefile  README.md  carts.mk
kastors-jacobi/common/: carts-example.mk
kastors-jacobi/jacobi-for/: Makefile  README.md  jacobi-for.c
kastors-jacobi/poisson-for/: Makefile  (+2 more)
kernels-omp/: README.md
llama2-transformer/: Makefile  README.md  arts.cfg  transformer.c  transformer_debug  transformer_fixed  transformer_o0  transformer_simple.c
lulesh/: Makefile  arts.cfg  lulesh.c  lulesh.cpp
miniapps/: README.md
ml-kernels/: README.md  carts.mk
monte-carlo/: Makefile  README.md  carts.mk
polybench/: carts.mk
seissol/: Makefile  README.md  carts.mk
simple-kernels/: README.md
specfem3d/: Makefile  README.md  carts.mk
sw4lite/: Makefile  README.md  carts.mk
sw4lite_rhs4sg_revNW/: rhs4sg.mlir  rhs4sg_arts.mlir
task-parallelism-omp/: Makefile.carts
(+261 files in other folders)
