[tool.poetry]
name = "carts-benchmarks"
version = "0.1.0"
description = "CARTS Benchmark Runner - Build, run, verify, and report"
authors = ["CARTS Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.15.0"
rich = "^13.7.0"

[tool.poetry.scripts]
carts-bench = "benchmark_runner:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
